# rcore_step_by_step_old2

./: .gitignore  Makefile  README.md  SUMMARY.md  book.json  comment.md  rust-toolchain  rustc-version
docs/: Trap.md  中断跳转.md  从文件系统执行程序.md  内存分配.md  内核线程.md  创建页表.md  命令行.md  命令行——执行程序.md  命令行——输入（信号量）.md  命令行——输出.md  处理异常.md  实现中断.md  时钟中断.md  最小化内核.md  格式化输出.md  独立式可执行程序.md  用户进程.md  线程调度.md  页表简介.md
gitbook/: comment.html
os/: Cargo.toml  Makefile  build.sh
os/crate/RoundRobinScheduler/: Cargo.toml
os/crate/RoundRobinScheduler/src/: lib.rs
os/crate/device_tree-rs/: .gitignore  Cargo.toml  README.md
os/crate/device_tree-rs/examples/: dump.rs
os/crate/device_tree-rs/fuzz/: Cargo.toml
os/crate/device_tree-rs/fuzz/fuzz_targets/: fuzz_target_1.rs
os/crate/device_tree-rs/src/: lib.rs  util.rs
os/crate/rcore-fs-sfs/src/: lib.rs
os/crate/rcore-fs/src/: lib.rs
os/crate/riscv/src/: addr.rs
os/opensbi/: README.md
os/riscv-pk/bbl/: bbl.c
os/src/: clock.rs  consts.rs  context.rs  init.rs  interrupt.rs  io.rs  lang_items.rs  lib.rs  machine.rs  main.rs  mcode.S  syscall.rs
os/src/boot/: entry.asm  linker.ld
os/src/fs/: device.rs  mod.rs  stdio.rs
os/src/memory/: mod.rs  paging.rs
os/src/memory/frame_allocator/: mod.rs
os/src/memory_set/: area.rs  attr.rs  handler.rs  mod.rs
os/src/process/: mod.rs  processor.rs  scheduler.rs  structs.rs  thread_pool.rs
os/src/riscv/: bits.rs  csr.rs  instructions.rs  mod.rs  sbi.rs
os/src/sync/: condvar.rs  mod.rs
os/src/trap/: trap.asm
os/userapps/: README.md  showaddr.rs
os/usr/: Makefile
os/usr/rust/: Cargo.toml  riscv32-os.json
os/usr/rust/src/: io.rs  lang_items.rs  lib.rs  syscall.rs
rbl/: .gitignore  Cargo.toml  Makefile
rbl/src/: consts.rs  device_tree.rs  lang_items.rs  lib.rs  load.rs  main.rs  memory.rs  serial.rs  trap.rs
rbl/src/boot/: boot.S  linker.ld  load.rs  mod.rs  payload.S  trap.S
