[package]
name = "os"
version = "0.1.0"
authors = ["chyyuu <yuchen@mail.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bbl = { path = "crate/bbl" }
riscv = { git = "https://github.com/rcore-os/riscv", rev = "c62af46", features = ["inline-asm"] }
buddy_system_allocator = "0.1"
bit_field = "0.9"
buddy-allocator = { path = "crate/buddy-allocator" }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
spin = "0.5"
RoundRobinScheduler = { path  = "crate/RoundRobinScheduler" }
