[package]
name = "os"
version = "0.1.0"
authors = ["chyyuu <yuchen@mail.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bbl = { path = "crate/bbl" }
riscv = { git = "https://github.com/rcore-os/riscv", rev = "c62af46", features = ["inline-asm"] }
