[package]
name = "rcore"
version = "0.1.0"
authors = ["chyyuu <yuchen@mail.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.5.0"
riscv-decode = "0.2.0"
arrayvec = { version = "0.4.10", default-features = false }
byteorder = { version = "1.3.1", default-features = false }
arr_macro = "0.1.2"

[[bin]]
name = "rcore"
path = "src/main.rs"

[[bin]]
name = "rcore-bare-metal"
path = "src/machine.rs"
required-features = ["physical_symbol_addresses"]

[features]
physical_symbol_addresses = []