[package]
name = "rbl"
version = "0.2.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>, Yu Chen <yuchen@tsinghua.edu.cn>"]
edition = "2018"

[dependencies]
xmas-elf = "0.6"
riscv = "0.5"
device_tree = { git = "https://github.com/jiegec/device_tree-rs" }
linked_list_allocator = "0.6"
volatile = "0.2"
bitflags = "1.0"
spin = "0.5"
lazy_static = { version = "1.3", features = ["spin_no_std"] }